--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -11,16 +11,16 @@
 
 
 <video id="video-bg" poster="../img/beach.png" preload autoplay muted loop>
-  <source src="../vid/surfing-waves-at-waikiki-beach-4-k-ZHS6WXS.mov" type="video/mp4">
+  <source src="./vid/beachvid.mp4" type="video/mp4">
 </video>
 
 <div class="hero">
   <!-- <h1>your.</h1>
   <h1>surf.</h1> -->
   <h1>OnlySurf</h1>
-  <p class="light">Your custom surf report source.
-  <br>View accurate surf conditions at any location.<br>
-  Use OnlySurf to catch the best waves of your life.</p>
+  <p class="text">
+  Catch the best waves of your life with OnlySurf<br>
+  Your soruce for accurate surf conditions at any location.</p>
 
   <button class="button-new"><a class="new" href="/signup">SIGN UP</a></button> 
   
