--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,7 +7,12 @@
     <title>OnlySurf</title>
 </head>
 
+
+
 <link rel="stylesheet" href="css/homepage.css">
+
+<link rel="stylesheet/less" type="text/css" href="../css/nav.less" />
+<script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
 
 
 <video id="video-bg" poster="../img/beach.png" preload autoplay muted loop>
@@ -20,7 +25,7 @@
   <h1>OnlySurf</h1>
   <p class="text">
   Catch the best waves of your life with OnlySurf<br>
-  Your soruce for accurate surf conditions at any location.</p>
+  Search for accurate surf conditions at any location.</p>
 
   <button class="button-new"><a class="new" href="/signup">SIGN UP</a></button> 
   
