--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -18,7 +18,7 @@
 <body>
 
     <div class="header-logo">
-        <a class="active logo" href="/">journ.ey</a>
+        <a class="active logo" href="/">OnlySurf</a>
 
         </div>
         
