--- a/public/css/style.less
+++ b/public/css/style.less
@@ -74,7 +74,7 @@ html, body {
 .signup-form {
     width: 60%;
     background-color: white;
-    border-radius: 0px 10px 10px 0px;
+    border-radius: 10px 10px 10px 10px;
 }
 
 .input-field {
@@ -94,6 +94,8 @@ html, body {
       outline: none;
       transition: all .2s;
       border-bottom-right-radius: 4px;
+      border-bottom-left-radius: 0;
+
       padding-right: 10px;
 } 
      focus {
@@ -204,6 +206,14 @@ body {
 background-size: 100vw;
   font-size: 100%;
   vertical-align: baseline;
+}
+
+@media (max-width: 480px) {
+  body {
+    background-repeat: no-repeat;
+    background-size: cover;
+
+  }
 }
 
 .grid-container {
@@ -383,46 +393,46 @@ h1 {
 /* ------------------------------- */
 /* HEADER */
 /* ------------------------------- */
-.header {
-    padding: 0 30px;
-    z-index: 4;
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* background-color: #121212; */
-    color: white;
-    font-family: 'berganteregular';
+// .header {
+//     padding: 0 30px;
+//     z-index: 4;
+//     position: absolute;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     /* background-color: #121212; */
+//     color: white;
+//     font-family: 'berganteregular';
   
-  }
+//   }
   
-  .navList {
-    display: flex;
-  }
+//   .navList {
+//     display: flex;
+//   }
   
-  .navLink {
-    right:0;
-    display: block;
-    padding: 20px;
-    color:white;
-  }
+//   .navLink {
+//     right:0;
+//     display: block;
+//     padding: 20px;
+//     color:white;
+//   }
   
-  .navLink:hover {
-    color: white;
-  }
+//   .navLink:hover {
+//     color: white;
+//   }
   
-  .navLink:visited {
-    color: white;
-  }
+//   .navLink:visited {
+//     color: white;
+//   }
   
-  .main-page {
-    display: flex;
-  }
+//   .main-page {
+//     display: flex;
+//   }
   
   
-  .city-img {
-    width: 400px
-  }
+//   .city-img {
+//     width: 400px
+//   }
 
 
 h1 {
