--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
 <body>
 
 	<div class="header-logo">
-        <a class="active logo" href="/">journ.ey</a>
+        <a class="active logo" href="/">OnlySurf</a>
 
         </div>
 
