CSS grid on beach show page

--- a/partials/navbar2.ejs
+++ b/partials/navbar2.ejs
@@ -5,14 +5,14 @@
       <div class="nav-container">
         <div class="nav-row">
             <div class="nav-logo">
-              <a href="/">
-                OnlySurf
+              <a id="logo" href="/">
+                <p id=only>OnlySurf</p>
               </a>
             </div>
             <div class="nav-controls">
-                <a href="/user/<%=oneUser%>">welcome</a>
+                <!-- <a href="/user/<%=oneUser%>">welcome |</a> -->
                 <a href="/beach">beaches</a>
-                <a href="/beach/new">add beach</a>
+                <a href="/beach/new"> add beach </a>
 
                 <!-- <a href="/user/profile/<%=oneUser%>">settings</a> -->
                 <a href="/logout">log out</a>
