--- a/public/css/nav.less
+++ b/public/css/nav.less
@@ -1,4 +1,13 @@
 
+    a {
+      color: #548a94;
+      text-decoration: normal;
+    }
+
+    a:hover {
+      color:rgb(230, 230, 230);
+    }
+  
   .nav-container {
     height: 58px;
     width: 100%;
@@ -10,7 +19,6 @@
 
     
     &.solid-nav {
-      background-color: #aaa;
       transition: background-color 0.2s linear;
     }
     
@@ -26,11 +34,23 @@
         display: inline-block;
         font-weight: 900;
         font-family: 'berganteregular';
+        color:white;
       }
       
       .nav-controls {
+        padding-top:14px;
         float: right;
+        color: #548a94;
+        text-decoration: normal; 
+        font-weight:light;   
         
       }
     }
   }
+
+
+#only {
+  color:white;
+  font-family: 'berganteregular';
+  font-weight: 400px;
+}
