--- a/views/beaches/beachNew.ejs
+++ b/views/beaches/beachNew.ejs
@@ -11,6 +11,9 @@
 
     <link rel="stylesheet" href="../css/main.css">
 
+    <link rel="stylesheet/less" type="text/css" href="../css/nav.less" />
+    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script>
+
 
 </head>
 
@@ -49,7 +52,7 @@
                     <input type="text" name="content" class="input" placeholder="write some notes..."></textarea>
                 </div>
                 <br>
-                <input type="submit" value="catch waves" class="button-new" />
+                <input type="submit" value="catch waves" class="button" id="btn-beach" />
             </form>
         </div>
         </div>
