--- a/public/css/entryindex.css
+++ b/public/css/entryindex.css
@@ -14,7 +14,6 @@ body {
 	padding: 0;
 	background-image: url('./beach_background04.png');
 	background-size: 100vw;
-	color: #333333;
     font-family: 'Work Sans', sans-serif;
 	overflow-x: hidden;
 }
@@ -73,3 +72,30 @@ button:active {
     -webkit-mask-image: linear-gradient(to bottom, rgba(107, 52, 52, 0.9) 0%,rgba(130, 78, 78, 0.8) 80%);
 }
 
+ 
+.button {
+	width: 200px;
+	border: none;
+	 padding: 18px;
+	  cursor: pointer;
+	  text-transform: uppercase;
+	  background: #548a94;
+	  color: #FFEEEF;
+	  letter-spacing: 0.2px;
+	  outline: 0;
+	  transition: all .3s;
+	  opacity: .9;
+	  }
+
+	#btn-beach {
+	  background: #ecece8;
+	  color: #548a94;
+
+	  /* border-radius: 0px 0px 10px 10px; */
+	}
+
+	a:active, a:hover, a:visited {
+	  color: #548a94;
+	  font-weight: lighter;
+	  text-decoration: normal;
+	}
