--- a/public/css/style.less
+++ b/public/css/style.less
@@ -22,11 +22,11 @@ html, body {
     color: white;
     transition: opacity .125s linear;
     
-    &:hover {
-      opacity: 0.5;
-      cursor: pointer;
-      transition: opacity .125s linear;
-    }
+    // &:hover {
+    //   opacity: 0.5;
+    //   cursor: pointer;
+    //   transition: opacity .125s linear;
+    // }
     
     &:visited {
       color: inherit;
@@ -95,7 +95,6 @@ html, body {
       transition: all .2s;
       border-bottom-right-radius: 4px;
       border-bottom-left-radius: 0;
-
       padding-right: 10px;
 } 
      focus {
@@ -390,51 +389,6 @@ h1 {
     width: 50px;
 }
 
-/* ------------------------------- */
-/* HEADER */
-/* ------------------------------- */
-// .header {
-//     padding: 0 30px;
-//     z-index: 4;
-//     position: absolute;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     /* background-color: #121212; */
-//     color: white;
-//     font-family: 'berganteregular';
-  
-//   }
-  
-//   .navList {
-//     display: flex;
-//   }
-  
-//   .navLink {
-//     right:0;
-//     display: block;
-//     padding: 20px;
-//     color:white;
-//   }
-  
-//   .navLink:hover {
-//     color: white;
-//   }
-  
-//   .navLink:visited {
-//     color: white;
-//   }
-  
-//   .main-page {
-//     display: flex;
-//   }
-  
-  
-//   .city-img {
-//     width: 400px
-//   }
-
-
 h1 {
     font-family: 'berganteregular';
 }
@@ -456,52 +410,25 @@ p {
 
     }
 
-    .map-show  {
-            padding: 0;
-            margin: 0;
-            width:500px;
-            list-style: none;
-            display: -webkit-box;
-            display: -moz-box;
-            display: -ms-flexbox;
-            display: -webkit-flex;
-            display: flex;
-            -webkit-flex-flow: row wrap;
-            justify-content: center;
-          
-    }
 
-    .map-details {
 
-        background-color: #8a8a8a;
-        overflow: hidden;
-        border-radius: 10px;
-        position: relative;
-        width: 100%;
-        padding: 6.5em 1em;
-        opacity: .8;
-        display: block;
-          mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0, 0, 0, 0.434) 100%);
-          -webkit-mask-image: linear-gradient(to bottom, rgba(107, 52, 52, 0.8) 0%,rgba(0,0,0,.9) 80%);
-    }
+    // .button-new {
+    //     font-family: 'berganteregular';
+    //     color: white;
+    //     background: #407f99;
+    //     border: white;
+    //     border-radius: 10px;
+    //     padding: 10px;
+    //     letter-spacing: .5px; 
+    //     opacity: .5;
+    //     box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
+    //   }
 
-    .button-new {
-        font-family: 'berganteregular';
-        color: white;
-        background: #407f99;
-        border: white;
-        border-radius: 10px;
-        padding: 10px;
-        letter-spacing: .5px; 
-        opacity: .5;
-        box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
-      }
-
-      .button-new:hover,
-      .button-new:focus,
-      .button-new:active {
-          transform: scale(1.05);
-      }
+    //   .button-new:hover,
+    //   .button-new:focus,
+    //   .button-new:active {
+    //       transform: scale(1.05);
+    //   }
 
       .date-divider {
         font-family: 'berganteregular';
@@ -513,3 +440,113 @@ p {
         opacity: .5;
         box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
       }
+
+      #btn-beach {
+        background: #548a94;
+        color: #ecece8;
+      }
+
+      .button {
+        letter-spacing: 0;
+    }
+
+    // .button {
+    //   width: 200px;
+    //   border: none;
+    //    padding: 18px;
+    //     cursor: pointer;
+    //     text-transform: uppercase;
+    //     background: #548a94;
+    //     color: #FFEEEF;
+    //     letter-spacing: 0.2px;
+    //     outline: 0;
+    //     transition: all .3s;
+    //     opacity: .9;
+    //     }
+    
+    //   #btn-beach {
+    //     background: #ecece8;
+    //     color: #548a94;
+    
+    //     /* border-radius: 0px 0px 10px 10px; */
+    //   }
+    
+    //   a:active, a:hover, a:visited {
+    //     color: #548a94;
+    //     font-weight: lighter;
+    //     text-decoration: normal;
+    //   }
+
+    .map-show  {
+      // padding: 0;
+      // margin: 0;
+      // width:500px;
+      // list-style: none;
+      // display: -webkit-box;
+      // display: -moz-box;
+      // display: -ms-flexbox;
+      // display: -webkit-flex;
+      // display: flex;
+      // -webkit-flex-flow: row wrap;
+      // justify-content: center;
+    
+}
+
+.map-details {
+  background-color: #8a8a8a;
+  overflow: hidden;
+  border-radius: 10px;
+  position: relative;
+  width: 100%;
+  opacity: .8;
+  display: block;
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0, 0, 0, 0.434) 100%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(107, 52, 52, 0.8) 0%,rgba(0,0,0,.9) 80%);
+}
+
+.grid-container2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-left: 20px;
+  margin-right: 20px;
+  grid-gap: 20px;
+  width:70%;
+  align-items: center;
+}
+
+.grid-child {
+  background-color:white;
+  height:100%;
+  width:100%;
+  align-self: center;
+  mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0, 0, 0, 0.434) 100%);
+  -webkit-mask-image: linear-gradient(to bottom, rgba(107, 52, 52, 0.8) 0%,rgba(0,0,0,.9) 80%);
+  background-color: #ffffff;
+  overflow: hidden;
+  border-radius: 10px;
+  mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0, 0, 0, 0.434) 100%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(107, 52, 52, 0.8) 0%,rgba(0,0,0,.9) 80%);
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.4s;
+    transition-property: transform;
+    opacity: .8;
+    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
+}
+
+.purple {
+
+}
+
+.green {
+
+}
+
+.info {
+  width: 100%;
+  background-color:white;
+}
