button styling, fixing for mobile

--- a/public/css/nav.less
+++ b/public/css/nav.less
@@ -54,3 +54,10 @@
   font-family: 'berganteregular';
   font-weight: 400px;
 }
+
+#btn-beach:hover,
+#btn-beach:focus,
+#btn-beach:active {
+	background-color: white;
+  color:#548a94;
+}
