--- a/public/css/style.less
+++ b/public/css/style.less
@@ -12,6 +12,8 @@ html, body {
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     margin: 0;
+    letter-spacing: .3px;
+
   }
 
 
@@ -325,6 +327,8 @@ background-image: url('../icons/waves.png');
 }
 .status p:first-child {
   font-weight: 600;
+  font-size:20px;
+  font-family: 'Roboto';
   color: #407f99;
 }
 
@@ -406,7 +410,8 @@ p {
     h3 {
         font-family: 'berganteregular';
         font-size:16px;
-        color:#407f99
+        color:#407f99;
+        letter-spacing: .3px;
 
     }
 
