ready to deploy to heroku

--- a/views/beaches/beachEdit.ejs
+++ b/views/beaches/beachEdit.ejs
@@ -40,5 +40,10 @@
         <input type = "submit" value ="Update"/>
     </div>
     </form>
+
+    <form class="trash-btn" action = "/beach/<%= oneBeach._id %>?_method=DELETE" method = "POST" value="delete">
+        <input class="trash-btn" type = image src="/img/delete+remove+trash+trash+bin+trash+can+icon-1320073117929397588.png">
+    </form>
+
 </body>
 </html>
