--- a/public/slick/slick.css
+++ b/public/slick/slick.css
@@ -131,9 +131,9 @@
 	height:400px;
 	background-position:center;
 	background-size:cover;
-	transition:.3s;
-	margin:0 -24px;
-	opacity:.2;
+	transition:0.5s;
+	margin:0 -10px;
+	opacity:.6;
     
 	-webkit-transform: scale3d(0.8, 0.8, 1);
     transform: scale3d(0.8, 0.8, 1);
@@ -142,8 +142,8 @@
 }
 .slick .slick-list {
 	padding: 20px 0!important;
-	/* padding-top:20px!important;
-	padding-bottom:20px!important; */
+	 padding-top:20px!important;
+	padding-bottom:20px!important; 
 }
 
 .slick .slick-center .bg {
@@ -171,7 +171,7 @@
 
 .edit-btn {
     position: absolute;
-    /* opacity: .5; */
+    opacity: 0;
     right:0;
     top:0;
     margin: 5px;
