--- a/views/beaches/beachIndex.ejs
+++ b/views/beaches/beachIndex.ejs
@@ -6,20 +6,13 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>OnlySurf | Favorite Beaches</title>
 
-
-
     <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
-
     <link rel="stylesheet" href="../css/entryindex.css">
-
-
     <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
-
-
-    <script src="../JS/slickfile.js" defer></script>
-    
     <link rel="stylesheet/less" type="text/css" href="../css/nav.less" />
-<script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script>
+    <script src="../JS/slickfile.js" defer></script>
 
 </head>
 <body>
@@ -29,6 +22,7 @@
     <div class="container">
         <div class="row">
             <center><h1>your favorite beaches...</h1>
+                <p class="gray">scroll through your list of beaches & click one to see current surf conditions</p>
 
             <div class="col-12">
                 <div class="slick">
