--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -15,7 +15,7 @@
 <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
 
 
-<video id="video-bg" poster="../img/beach.png" preload autoplay muted loop>
+<video id="video-bg" poster="../img/beachscreen.png" preload autoplay muted loop>
   <source src="./vid/beachvid.mp4" type="video/mp4">
 </video>
 
