--- a/public/css/style.less
+++ b/public/css/style.less
@@ -9,7 +9,7 @@
 html, body {
     height: 100%;
     color: #666666;
-    font-family: "Roboto", sans-serif;
+    font-family: "Work Sans";
     -webkit-font-smoothing: antialiased;
     margin: 0;
     letter-spacing: .3px;
@@ -203,7 +203,7 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
     background-color: #323236;
-    background-image: url(./beach_background04.png);
+    background-image: url(./lighter.png);
 background-size: 100vw;
   font-size: 100%;
   vertical-align: baseline;
