--- a/views/beaches/beachIndex.ejs
+++ b/views/beaches/beachIndex.ejs
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="../css/entryindex.css">
     <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
     <link rel="stylesheet/less" type="text/css" href="../css/nav.less" />
-
     <script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script>
+    <link rel="stylesheet/less" type="text/css" href="../css/nav.less" />
+
     <script src="../JS/slickfile.js" defer></script>
 
 </head>
