--- a/public/css/entryindex.css
+++ b/public/css/entryindex.css
@@ -12,7 +12,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-image: url('./beach_background04.png');
+	background-image: url('./lighter.png');
 	background-size: 100vw;
     font-family: 'Work Sans', sans-serif;
 	overflow-x: hidden;
@@ -68,6 +68,7 @@ button:active {
 }
 
 .bg {
+	opacity:.8;
 	mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0, 0, 0, 0.5) 100%);
     -webkit-mask-image: linear-gradient(to bottom, rgba(107, 52, 52, 0.9) 0%,rgba(130, 78, 78, 0.8) 80%);
 }
