--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto';
 }
 
 body {
@@ -72,7 +73,7 @@ font: size 10px;
 .hero button {
   padding: 1em 1.2em;
   background-color: #5eac9e;
-  font-family: 'Raleway';
+  font-family: 'Roboto';
   font-size: 0.8rem;
   font-weight: light;
   letter-spacing: 1px;
