--- a/public/css/style.less
+++ b/public/css/style.less
@@ -561,3 +561,22 @@ p {
   position: absolute;
   left:0;
 }
+
+h1 {
+  font-family: 'berganteregular';
+}
+
+p {
+  padding-left: 15px;
+  padding-right: 15px;
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-size: 16px;
+  display: block;
+  font-weight: lighter;
+  }
+
+  h3 {
+      font-family: 'berganteregular';
+      font-size:16px;
+  }
