--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -8,6 +8,10 @@
 </head>
 
 
+<link rel="stylesheet/less" type="text/css" href="../css/style.less" />
+<script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
+
+
 <link rel="stylesheet" href="css/homepage.css">
 
 <video id="video-bg" poster="../img/beachscreen.png" preload autoplay muted loop>
