--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -3,16 +3,16 @@
     src: url('../fonts/bergante-webfont.woff2') format('woff2')
   }
   
-  @import url('https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap');
-
   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200&300&400&family=Vidaloka&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Vidaloka&display=swap');
 
   * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto';
-}
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;}
 
 body {
   height: 100vh;
@@ -22,6 +22,10 @@ body {
   --blue: white;
 }
 
+p {
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
 
 h1 {
   color:white;
@@ -63,10 +67,8 @@ ul {
   margin: 2em 0 2em 0;
   line-height: 25px;
   color:white;
-  font-family: "Roboto";
-font-weight:lighter;
-font: size 10px;
--webkit-font-smoothing: antialiased;
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
 
 }
 
