--- a/views/beaches/beachShow.ejs
+++ b/views/beaches/beachShow.ejs
@@ -27,7 +27,8 @@
         
         <header>
             <h1>Current Surf Conditions <%= singleBeach.name %></h1>
-            <center><p class="date-divider"><%= dateTimeFormat3.format(date1) %></p>
+            <center><p>
+              <h3 class="date"><%= dateTimeFormat3.format(date1) %></h3>
               
 
 
