--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,10 +17,7 @@
 </head>
 <body>
 
-    <div class="header-logo">
-        <a class="active logo" href="/">OnlySurf</a>
 
-        </div>
         
     <div class="signup-form-wrapper2">
 
@@ -70,12 +67,12 @@
         <input type ="number" id = "theme" name = "theme"/> -->
         <br>
 
-    <div class=input-field>
+    <!-- <div class=input-field>
 
         <input class="input" type = "text" id = "avatar" name = "avatarImage"
         placeholder="avatar image"/>
         <br>
-    </div>
+    </div> -->
 
     <div class="action">
         <input class="button" type = "submit" value = "create my profile"/>
